--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -49,15 +49,18 @@
 
 .buttonsDiv {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
     width: 30%;
     margin-left: 20px;
+    padding-right: 100px;
+    box-sizing: border-box;
 }
 
 .button {
     background-color: white;
     border-radius: 3px;
-    margin: 0 5px;
     padding: 5px;
     font-size: 0.9rem;
 }
