--- a/client/src/pages/AddProduct/AddProduct.css
+++ b/client/src/pages/AddProduct/AddProduct.css
@@ -9,7 +9,7 @@
     color: white
 }
 
-form p {
+.addProductForm p {
     margin: 15px 5px;
 }
 
@@ -44,4 +44,26 @@ form p {
 
 .formDiv > input {
     width: 50%;
+}
+
+.productFormButton {
+    background: rgb(164, 142, 255);
+    border: 1px solid rgb(164, 142, 255);;
+    border-radius: 4px;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    padding: 8px 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: 0.3s ease background;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.productFormButton:hover {
+    background: #fff;
+    color: #43a3e6;
+    transition: 0.3s ease background;
 }
