--- a/client/src/pages/SignupPage/SignupPage.css
+++ b/client/src/pages/SignupPage/SignupPage.css
@@ -1,69 +1,52 @@
-form {
-    margin: 30px auto;
-    width: 380px;
-  }
-  
-  .form {
-    border: 1px solid rgb(40, 41, 61);
-    border-radius: 10px;
-    margin: 60px auto;
-    max-width: 450px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  }
+.authForm {
+  margin: 30px auto;
+  width: 380px;
+}
 
-  form label {
-    color: #666;
-    display: inline-block;
-    margin-bottom: 10px;
-    text-align: center;
-    width: 100%;
-  }
-  
-  .form-input {
-    padding: 15px;
-    border-radius: 6px;
-    border: 2px solid transparent;
-    background-color: rgb(40, 41, 61) !important;
-    color: white;
-  }
-  
-  form input,
-  form button {
-    box-sizing: border-box;
-    font-size: 14px;
-    outline: 0;
-    padding: 4px;
-    width: 100%;
-    margin-bottom: 20px;
-  }
-  
-  form ::placeholder {
-    color: rgb(177, 177, 177);
-    text-align: left;
-  }
-  
-  form button {
-    background: rgb(164, 142, 255);
-    border: 1px solid rgb(164, 142, 255);;
-    border-radius: 4px;
-    color: #fff;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 14px;
-    padding: 8px 16px;
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: 0.3s ease background;
-    width: 100%;
-  }
-  
-  form button:hover {
-    background: #fff;
-    color: #43a3e6;
-    transition: 0.3s ease background;
-  }
-  
-form h1{
-    text-align: center;
-    margin: 15px;
- }
+.authForm label {
+  color: #666;
+  display: inline-block;
+  margin-bottom: 10px;
+  text-align: center;
+  width: 100%;
+}
+
+.authForm input, .authForm button {
+  box-sizing: border-box;
+  font-size: 14px;
+  outline: 0;
+  padding: 4px;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.authForm ::placeholder {
+  color: rgb(177, 177, 177);
+  text-align: left;
+}
+
+.authForm button {
+  background: rgb(164, 142, 255);
+  border: 1px solid rgb(164, 142, 255);;
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  padding: 8px 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: 0.3s ease background;
+  width: 100%;
+}
+
+.authForm button:hover {
+  background: #fff;
+  color: #43a3e6;
+  transition: 0.3s ease background;
+}
+
+.authForm h1 {
+  text-align: center;
+  margin: 15px;
+}
