--- a/client/src/pages/AddProduct/AddProduct.css
+++ b/client/src/pages/AddProduct/AddProduct.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     background-color: #C2634B;
+    height: 92vh;
 }
 
 .baseDiv h3 {
@@ -9,15 +10,19 @@
     color: white
 }
 
+.addProductForm {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 80%;
+}
+
 .addProductForm p {
     margin: 15px 5px;
 }
 
-.addProductForm {
-    width: 80%;
-}
-
 .imageFormDiv {
+    flex: 3;
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -26,6 +31,8 @@
 }
 
 .imageFormDiv > input {
+    display: none;
+    flex: 1;
     border: 1px dashed black;
     margin: 5px;
     height: 50px;
@@ -46,7 +53,15 @@
     width: 50%;
 }
 
-.productFormButton {
+.formDiv > textarea {
+    width: 50%;
+}
+
+.descriptionDiv {
+    flex: 2;
+}
+
+.uploadButton {
     background: rgb(164, 142, 255);
     border: 1px solid rgb(164, 142, 255);;
     border-radius: 4px;
@@ -54,7 +69,7 @@
     cursor: pointer;
     display: inline-block;
     font-size: 14px;
-    padding: 8px 16px;
+    padding: 16px;
     text-decoration: none;
     text-transform: uppercase;
     transition: 0.3s ease background;
@@ -62,7 +77,7 @@
     margin-bottom: 20px;
 }
 
-.productFormButton:hover {
+.uploadButton:hover {
     background: #fff;
     color: #43a3e6;
     transition: 0.3s ease background;
