--- a/client/src/pages/EditProductPage/EditProductPage.css
+++ b/client/src/pages/EditProductPage/EditProductPage.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     background-color: #C2634B;
+    height: 92vh;
 }
 
 .baseDiv h3 {
@@ -9,45 +10,32 @@
     color: white
 }
 
+.editProductForm {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 80%;
+}
+
 .editProductForm p {
     margin: 15px 5px;
 }
 
-.editProductForm {
-    width: 80%;
-}
-
 .editImageFormDiv {
+    flex: 3;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     background-color: white;
     text-align: left;
     margin-bottom: 20px;
 }
 
-.newImagesDiv {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-    flex-basis: 50%;
-    padding: 5px;
-}
+/* to be deleted */
 
-.imageInput {
+.imageInput { 
     border: 1px dashed black;
     height: 50px;
     width: 100%;
-}
-
-.divider {
-    height: 80%;
-    border: 1px solid grey;
-}
-
-.oldImagesDiv {
-    height: 100%;
-    flex-basis: 50%;
 }
 
 .editFormDiv {
@@ -63,6 +51,34 @@
 
 .editFormDiv > input {
     width: 50%;
+}
+
+.editFormDiv > textarea {
+    width: 50%;
+}
+
+.descriptionDiv {
+    flex: 2;
+}
+
+.uploadButton {
+    background: rgb(164, 142, 255);
+    border: 1px solid rgb(164, 142, 255);;
+    border-radius: 4px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 14px;
+    padding: 16px;
+    text-decoration: none;
+    transition: 0.3s ease background;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.uploadButton:hover {
+    background: #fff;
+    color: #43a3e6;
+    transition: 0.3s ease background;
 }
 
 .deleteProductButton {
