--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,291 @@
 .App {
   text-align: center;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: rgb(242,242,242);
+}
+
+
+.offers {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.offers .wrap-card:not(:nth-child(5n)) {
+  margin-right: 15px;
+}
+.offers .wrap-card {
+  margin-top: 15px;
+}
+.offers .wrap-card {
+  width: calc(100% / 5 - 12px);
+  cursor: pointer;
+}
+
+/* Avatar - offers */
+.offer-card div:first-child {
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+.offer-card img {
+  object-fit: cover;
+}
+.offer-card span {
+  font-size: 12px;
+  color: var(--dark-grey);
+}
+.offer-card div.avatar-card {
+  height: 50px;
+}
+img.avatar-card {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+/* Img - offers */
+.product-card {
+  width: 100%;
+  height: 357px;
+}
+
+/* Details - offers */
+.offer-card div:last-child {
+  padding: 10px;
+  font-size: 14px;
+  line-height: 16px;
+}
+.offer-card div:last-child p:first-child {
+  font-weight: 600;
+}
+.offer-card div:last-child p:not(:first-child) {
+  font-size: 12px;
+  color: var(--dark-grey);
+}
+
+/* ------------ OFFER ----------- */
+.main-offer {
+  background-color: var(--light-grey);
+  padding-bottom: 100px;
+}
+.offer-page {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 20px;
+}
+.offer-page .carousel {
+  display: flex;
+  overflow: hidden;
+  overflow-x: scroll;
+  width: 50%;
+  height: 90%;
+  margin-right: 10vh;
+}
+.offer-page .carousel img {
+  height: 65vh;
+  width: calc(100% / 2);
+  border-radius: 5px;
+  margin-right: 2px;
+}
+.offer-page-details {
+  background-color: #FFF;
+  padding: 30px;
+  margin-top: 5vh;
+  width: 17%;
+  
+}
+
+.you-might-also-like {
+  float: right;
+  margin-top: 10px;
+}
+
+.description-details {
+  font-size: 15px;
+}
+
+.description-general {
+  font-size: 13px;
+  font-weight: 300;
+}
+
+
+.hr-design {
+  height: 1px;
+  border: none;
+  border-top: 2px solid #ccc;
+  margin: 20px 0;
+}
+
+
+.bloc-1 {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0 40px 0;
+  line-height: 20px;
+  font-size: 13px;
+  border-bottom: 1px solid var(--dark-grey);
+}
+
+.description-details {
+  font-size: 15px;
+  display: flex;
+  justify-content: space-between;
+  margin: 5px 0;
+  color: #bbb;
+}
+
+.description-details span:first-child {
+  margin-right: 5px;
+}
+
+.bloc-1 div {
+  text-align: left;
+}
+
+.bloc-1 > div:first-child {
+  color: var(--dark-grey);
+}
+.offer-price {
+  font-weight: 600;
+  font-size: 30px;
+  display: flex;
+}
+
+.username-details-page {
+  font-size: 20px;
+}
+
+.text-title {
+  font-weight: 600;
+  font-size: 24px;
+  display: flex;
+}
+
+.bloc-2 {
+  margin-bottom: 30px;
+  text-align: left;
+}
+.bloc-2 p:first-child {
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+.bloc-2 p:nth-child(2) {
+  color: var(--dark-grey);
+  margin-bottom: 20px;
+}
+
+.name-review {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.bloc-2 img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+  object-fit: cover;
+}
+
+.bloc-2 div {
+  display: flex;
+  align-items: flex-start;
+}
+
+.main-offer .btn-green {
+  padding: 10px;
+  width: 100%;
+  background-color: #09aeb7;
+  border: none;
+  color: #fff;
+  margin-bottom: 5px;
+}
+
+ .btn-border-green {
+  padding: 10px;
+  width: 100%;
+  border: 1.5px solid #09aeb7;
+  color: #000000;
+  margin-bottom: 5px;
+  background-color: #FFF;
+}
+
+
+
+/* Publish an offer */
+.form-publish {
+  background-color: var(--light-grey);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.form-publish .wrapper {
+  margin: 30px 0;
+}
+.form-publish form {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin: 0 auto;
+  font-size: 14px;
+}
+.form-publish form div {
+  background-color: var(--white);
+  margin-bottom: 10px;
+  width: 100%;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.form-publish form input#file {
+  display: none;
+}
+.form-publish .upload-file {
+  color: var(--main-green);
+  font-weight: 600;
+  margin: 0 auto;
+  border: 1px solid var(--main-green);
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.form-publish .icon-plus {
+  margin-right: 10px;
+}
+.form-publish .upload-file:hover {
+  background-color: var(--main-green);
+  color: var(--white);
+}
+.form-publish label {
+  max-width: 200px;
+}
+.form-publish form input,
+.form-publish form textarea {
+  font-family: "Open Sans", sans-serif;
+  width: 300px;
+  font-size: 12px;
+  margin-left: 40%;
+  border: none;
+  border-bottom: 1.8px solid var(--light-grey);
+}
+.form-publish form textarea {
+  height: 15vh;
+  margin-left: 0;
+}
+.form-publish form input.submit {
+  margin-left: 0;
+  margin: 0 auto;
+  background-color: var(--main-green);
+  color: var(--white);
+  border: 1px solid var(--main-green);
+  border-radius: 5px;
+  font-family: "Open Sans", sans-serif;
+  cursor: pointer;
+  font-size: 14px;
+  padding: 10px 15px;
+  margin-top: 30px;
 }
