--- a/client/src/pages/ProductsListPage/ProductListPage.css
+++ b/client/src/pages/ProductsListPage/ProductListPage.css
@@ -1,5 +1,5 @@
 .listDiv {
     margin: 10px;
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-columns: repeat(4, 1fr);
 }
