--- a/client/src/components/LatestProducts/LatestProducts.css
+++ b/client/src/components/LatestProducts/LatestProducts.css
@@ -1,10 +1,12 @@
-.latestProductsText {
-    text-align: left;
-    margin: 15px;
+.latestProductsDiv {
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
 }
 
-.latestProductsDiv {
-    margin: 10px;
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+@media only screen and (min-width: 1920px) {
+    .latestProductsDiv {
+        width: 50%;
+    }
 }
