--- a/client/src/components/ProductCard/ProductCard.css
+++ b/client/src/components/ProductCard/ProductCard.css
@@ -1,222 +1,110 @@
-.d-flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.newCard {
+    position: relative;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    aspect-ratio: 0.8/1;
 }
 
-.align-center {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+.newCard a {
+    display: block;
+    width: 100%;
+    height: 80%;
 }
 
-.flex-centerY-centerX {
-  justify-content: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+.newCard:hover .cardImage {
+    filter: blur(5px) opacity(0.4);
+    transition: filter 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
-body {
-  background-color: #ffffff;
+.newCard:not(:hover) .cardImage {
+    filter: blur(0px);
+    transition: filter 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
-.page-wrapper {
-  height: 100%;
-  display: table;
+.newCard:hover .titlePriceDiv {
+    transform: translateY(-250%);
+    transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
-.page-wrapper .page-inner {
-  display: table-cell;
-  vertical-align: middle;
+.newCard:not(:hover) .titlePriceDiv {
+    transform: translateY(0%);
+    transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
-.el-wrapper {
-  width: 360px;
-  padding: 15px;
-  margin: 15px auto;
-  background-color: #fff;
+.newCard:hover .cardDescription {
+    transform: translateY(-100%);
+    transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition-delay: 0.3s;
 }
 
-@media (max-width: 991px) {
-  .el-wrapper {
-    width: 345px;
-  }
+.newCard:not(:hover) .cardDescription {
+    transform: translateY(0%);
+    transition: transform 0.2s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
-@media (max-width: 767px) {
-  .el-wrapper {
-    width: 290px;
-    margin: 30px auto;
-  }
+.cardImageDiv {
+    height: 100%;
+    padding: 20px 20px 0;
+    display: flex;
+    justify-content: center;
 }
 
-.el-wrapper:hover .h-bg {
-  left: 0px;
+.cardImage {
+    aspect-ratio: 1/1;
+    width: 100%;
 }
 
-.el-wrapper:hover .price {
-  left: 20px;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
-  color: #818181;
+.cardButtonsDiv {
+    z-index: 1000;
+    height: 20%;
+    padding: 0 20px 14px;
 }
 
-.el-wrapper:hover .add-to-cart {
-  left: 50%;
+.cardButton {
+    height: 100%;
+    width: 50%;
+    border: none;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2)
 }
 
-.el-wrapper:hover .img {
-  webkit-filter: blur(7px);
-  -o-filter: blur(7px);
-  -ms-filter: blur(7px);
-  filter: blur(7px);
-  filter: progid:DXImageTransform.Microsoft.Blur(pixelradius='7', shadowopacity='0.0');
-  opacity: 0.4;
+.addCardButton {
+    background-color: #F9D5C7;
 }
 
-.el-wrapper:hover .info-inner {
-  bottom: 155px;
+.addCardButton:hover {
+    background-color: #fbe5dc;
+    box-shadow: 0 0 5px #eacabe;
+    transition: all 0.3s ease-in-out;
 }
 
-.el-wrapper:hover .a-size {
-  -webkit-transition-delay: 300ms;
-  -o-transition-delay: 300ms;
-  transition-delay: 300ms;
-  bottom: 50px;
-  opacity: 1;
+.makeOfferButton {
+    background-color: #A7E6D7;
 }
 
-.el-wrapper .box-down {
-  width: 100%;
-  height: 60px;
-  position: relative;
-  overflow: hidden;
+.makeOfferButton:hover {
+    background-color: #E0F8D8;
+    box-shadow: 0px 0px 5px #98FB98;
+    transition: all 0.3s ease-in-out;
 }
 
-.el-wrapper .box-up {
-  width: 100%;
-  height: 300px;
-  position: relative;
-  overflow: hidden;
-  text-align: center;
+.titlePriceDiv {
+    position: absolute;
+    top: 80%;
+    height: 20%;
+    width: 50%;
+    margin: 0 25%;
 }
 
-.el-wrapper .img {
-  padding: 20px 0;
-  -webkit-transition: all 800ms cubic-bezier(0, 0, 0.18, 1);
-  -moz-transition: all 800ms cubic-bezier(0, 0, 0.18, 1);
-  -o-transition: all 800ms cubic-bezier(0, 0, 0.18, 1);
-  transition: all 800ms cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
-  -webkit-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  -moz-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  -o-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
+.titlePriceDiv > p {
+    margin: 0;
 }
 
-.img {
-  max-width: 100;
-}
-
-
-
-.info-inner {
-  -webkit-transition: all 400ms cubic-bezier(0, 0, 0.18, 1);
-  -moz-transition: all 400ms cubic-bezier(0, 0, 0.18, 1);
-  -o-transition: all 400ms cubic-bezier(0, 0, 0.18, 1);
-  transition: all 400ms cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
-  -webkit-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  -moz-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  -o-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
-  position: absolute;
-  width: 100%;
-  bottom: 25px;
-}
-
-.info-inner .p-name,
-.info-inner .p-company {
-  display: block;
-}
-
-
-
-.info-inner .p-company {
-  font-family: 'Lato', sans-serif;
-  font-size: 12px;
-  text-transform: uppercase;
-  color: #8c8c8c;
-}
-
-.a-size {
-  -webkit-transition: all 300ms cubic-bezier(0, 0, 0.18, 1);
-  -moz-transition: all 300ms cubic-bezier(0, 0, 0.18, 1);
-  -o-transition: all 300ms cubic-bezier(0, 0, 0.18, 1);
-  transition: all 300ms cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
-  -webkit-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  -moz-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  -o-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
-  position: absolute;
-  width: 100%;
-  bottom: -20px;
-  font-family: 'PT Sans', sans-serif;
-  color: #828282;
-  opacity: 0;
-}
-
-
-.el-wrapper .box-down .add-to-cart a {
-
-  text-decoration: none; /* Add this line */
-}
-
-a {
-  text-decoration: none;
-}
-
-a:link {
-  color: black;
-}
-
-a:visited {
-  color: black;
-}
-
-.box-down-container {
-  display: flex;
-}
-
-.box-down:nth-child(1) {
-  background-color: #F9D5C7; 
-}
-
-.box-down:nth-child(2) {
-  background-color: #A7E6D7; 
-}
-
-.box-down {
-  background-color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* add box shadow */
-
-}
-
-.box-down:hover {
-  background-color: #E0F8D8;
-  box-shadow: 0px 0px 5px #98FB98;
-  transition: all 0.3s ease-in-out;
+.cardDescription {
+    top: 80%;
+    height: 20%;
+    width: 50%;
+    margin: 0 25%;
+    position: absolute;
 }
