--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -6,3 +6,21 @@
     background-color: #C2634B;
     color: white;
 }
+
+.secondSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.latestProductsText {
+    width: 80%;
+    text-align: left;
+    margin: 15px;
+}
+
+@media only screen and (min-width: 1920px) {
+    .latestProductsText {
+        width: 50%;
+    }
+}
