--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: rgb(242,242,242);
+  background-color: rgb(247 247 247);
 }
 
 
