--- a/client/src/components/LatestProducts/LatestProducts.css
+++ b/client/src/components/LatestProducts/LatestProducts.css
@@ -1,10 +1,14 @@
 .latestProductsText {
     text-align: left;
     margin: 15px;
+    margin-left: 28vh;
 }
 
 .latestProductsDiv {
     margin: 10px;
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-columns: 20% 20% 20% 20%;
+    margin-left: 28vh;
+    font-weight: 400;
+    background-color: rgb(247 247 247);
 }
