Creation of the underNavbar for future categorie, trying to change the design of the product card

--- a/client/src/pages/AddProduct/AddProduct.css
+++ b/client/src/pages/AddProduct/AddProduct.css
@@ -160,3 +160,12 @@
 .input-img {
     display: none;
 }
+
+.wrapper {
+    height: 120vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: none;
+}
