--- a/client/src/components/Carousel/Carousel.css
+++ b/client/src/components/Carousel/Carousel.css
@@ -1,3 +1,10 @@
+.carouselWrapper {
+    height: 100%;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+}
+
 .carouselDiv {
     margin: 10px;
     position: relative;
