--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -26,7 +26,14 @@
 }
 
 .searchBarForm {
-    height: 55%;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.searchBar {
+    height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
@@ -34,19 +41,21 @@
     background-color: lightgrey;
 }
 
-.searchBar {
+.searchBarInput {
     height: 100%;
     width: 100%;
-    font-size: 0.7rem;
+    font-size: 1rem;
     background-color: #D3D3D3;
     border: 0;
     outline: none;
     margin: 0;
+    border-radius: 3px;
 }
 
 .glass {
     height: 20px;
     padding: 10px;
+    box-sizing: content-box !important;
 }
 
 .buttonsDiv {
