--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -38,14 +38,14 @@
     display: flex;
     align-items: center;
     border-radius: 3px;
-    background-color: lightgrey;
+    background-color: #DCDCDC;
 }
 
 .searchBarInput {
     height: 100%;
     width: 100%;
     font-size: 1rem;
-    background-color: #D3D3D3;
+    background-color: #DCDCDC;
     border: 0;
     outline: none;
     margin: 0;
@@ -56,6 +56,12 @@
     height: 20px;
     padding: 10px;
     box-sizing: content-box !important;
+}
+
+.previewDivider {
+    margin: 0;
+    height: 10px;
+    background-color: white;
 }
 
 .buttonsDiv {
