--- a/client/src/components/UnderNavbar/UnderNavbar.css
+++ b/client/src/components/UnderNavbar/UnderNavbar.css
@@ -1,20 +1,20 @@
 .underNavbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 3vh;
-    border-bottom: 1px solid lightgrey;
-    margin-left: 7vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 3vh;
+  border-bottom: 1px solid lightgrey;
 }
 
 .text-underNavbar {
-    display: flex;
-    align-items: flex-start; /* align items to the top */
-  }
-  
-  .text-underNavbar p {
-    margin-left: 8vh;
-    font-size: 14px;
-    color: #999999;
-    margin-bottom: 0; /* remove bottom margin to prevent extra space */
-  }
+  display: flex;
+  align-items: flex-start;
+  margin-left: 7vh;
+}
+
+.text-underNavbar p {
+  margin-left: 8vh;
+  font-size: 14px;
+  color: #999999;
+  margin-bottom: 0;
+}
