--- a/client/src/components/ImageInput/ImageInput.css
+++ b/client/src/components/ImageInput/ImageInput.css
@@ -4,23 +4,29 @@
     margin: 5px;
     flex: 1;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 .imageInputHalfDiv {
+    border: 1px solid red;
     flex-basis: calc(50% - 15%/2);
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    margin: 0;
 }
 
 .canvasDiv {
+    border: 1px solid black;
     flex: 1;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.imageInputCanvas {
+    border: 1px solid black;
+    border-radius: 5%;
+    width: 60%;
+    margin: 15px 0;
+    aspect-ratio: 1/1;
 }
 
 .removeImageButton {
@@ -35,14 +41,6 @@
     cursor: pointer;
     animation: fade-in 5s;
     display: none;
-}
-
-.imageInputCanvas {
-    border: 1px solid black;
-    border-radius: 5%;
-    width: 60%;
-    margin: 15px 0;
-    aspect-ratio: 1/1;
 }
 
 .loading {
