Fixed imageInput. Resizes correctly again.

--- a/client/src/components/ImageInput/ImageInput.css
+++ b/client/src/components/ImageInput/ImageInput.css
@@ -1,44 +1,59 @@
 .imageInputDiv {
     position: relative;
-    border: 2px dashed grey;
-    margin: 5px;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 270px;
+    width: 100%;
+    border: 2px dashed grey;
 }
 
 .imageInputHalfDiv {
-    border: 1px solid red;
     flex-basis: calc(50% - 15%/2);
+    display: flex;
+    height: 100%;
 }
 
 .canvasDiv {
-    border: 1px solid black;
     flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.canvasWrapper {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 60%;
 }
 
 .imageInputCanvas {
     border: 1px solid black;
     border-radius: 5%;
-    width: 60%;
-    margin: 15px 0;
+    width: 100%;
     aspect-ratio: 1/1;
 }
 
 .removeImageButton {
     position: absolute;
-    top: 11%;
-    left: 64%;
-    height: 20%;
+    display: none;
+    top: 4%;
+    left: 71%;
+    width: 25%;
     aspect-ratio: 1/1;
     padding: 0;
-    border: 2px solid #D70040;
+    border: 1px solid #D70040;
     border-radius: 10%;
     cursor: pointer;
+    background-color: red;
     animation: fade-in 5s;
-    display: none;
+}
+
+.deleteButtonImage {
+    height: 100%;
 }
 
 .loading {
@@ -79,6 +94,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0;
 }
 
 .uploadIcon {
