--- a/client/src/pages/AddProduct/AddProduct.css
+++ b/client/src/pages/AddProduct/AddProduct.css
@@ -18,9 +18,10 @@
     display: flex;
     flex-direction: column;
     font-size: 16px;
+    width: 100%;
 }
 
-.addProductForm div {
+.addProductForm > div {
     display: flex;
     align-items: center;
     justify-content: space-between;
