--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -33,11 +33,12 @@
 }
 
 .navSelection {
-    background-color: #E0E0E0;
+    background-color: rgb(239, 209, 170);
     cursor: pointer;
     padding: 0 10px;
     border: none;
     border-right: 2px solid grey;
+    border-radius: 3px 0 0 3px;
     box-sizing: content-box !important;
 }
 
