--- a/client/src/pages/ProfilePage/ProfilePage.css
+++ b/client/src/pages/ProfilePage/ProfilePage.css
@@ -1,87 +1,69 @@
 .profilePageDiv {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #C2634B;
-    min-height: 92vh;
+    justify-content: center;
+    min-height: 89vh;
+    
 }
 
-.topDiv {
+.profilePageWrapper {
     width: 80%;
-    display: flex;
-    text-align: left;
-    height: 320px;
-    margin-bottom: 50px;
+    margin: 20px;
 }
 
-.profilePictureDiv {
-    flex-basis: 20%;
+.userDiv {
+    display: flex;
+    height: 320px;
+}
+
+.userPictureDiv {
+    flex-basis: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 20px;
+    background-color: white;
 }
 
 .profilePic {
-    width: 80%;
+    height: 80%;
     border-radius: 50%;
 }
 
-.informationDiv {
+.userInfoDiv {
     flex: 1;
-    display: flex;
-    align-items: center;
+    background-color: white;
 }
 
-.infoTextDiv {
-    flex: 1;
-    background-color: #f7f7f7;
-    margin: 10px;
-    border-radius: 5px;
-    height: 80%;
-}
-
-.infoTextDiv h1 {
-    margin: 10px 5px 0;
-}
-
-.infoTextDiv p {
-    margin: 0 5px 0;
-}
-
-.divider {
-    height: 10px;
-    margin: 0;
-    font-size: 5rem;
-    width: 80%;
-    background-color: black;
-}
-
-.tabButtonDiv {
-    width: 80%;
+.tabButtonsDiv {
+    margin-top: 20px;
     display: flex;
     justify-content: flex-start;
+    background-color: white;
 }
 
 .tabButton {
     font-size: 1rem;
     padding: 10px;
-    background-color: #f7f7f7;
     border: none;
     cursor: pointer;
+    background-color: white;
 }
 
 .tabButton:hover {
-    background-color: lightgrey;
+    background-color: rgb(247 247 247);
+}
+
+.profilePageDivider {
+    margin: 0;
 }
 
 .reviewsAndProductsDiv {
     background-color: white;
-    width: 80%;
-    flex: 1;
 }
 
 @media only screen and (min-width: 1920px) {
-    .topDiv, .tabButtonDiv, .divider, .reviewsAndProductsDiv {
+    .profilePageWrapper {
         width: 50%;
     }
 }
+
