--- a/client/src/pages/ProductDetailPage/ProductDetailPage.css
+++ b/client/src/pages/ProductDetailPage/ProductDetailPage.css
@@ -1,19 +1,33 @@
-.productDetailsBodyDiv {
+.productDetailsDiv {
   background-color: #f7f7f7;
   min-height: 89vh;
   display: flex;
   justify-content: center;
 }
 
-.productDetailsDiv {
+.productDetailsWrapper {
   width: 80%;
-  margin: 0 10%;
   display: flex;
-  justify-content: space-between;
+}
+
+.productDetailsMainDiv {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.editProductButton {
+  width: 502px;
+  border: none;
+  padding: 5px;
+  background-color: #C2634B;
+  color: white;
+  border-radius: 5px;
 }
 
 @media only screen and (min-width: 1920px) {
-  .productDetailsDiv {
+  .productDetailsWrapper {
       width: 50%;
   }
 }
