--- a/client/src/components/ProductCard/ProductCard.css
+++ b/client/src/components/ProductCard/ProductCard.css
@@ -3,6 +3,8 @@
     background-color: white;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 100%;
     aspect-ratio: 0.8/1;
 }
@@ -10,7 +12,6 @@
 .newCard a {
     display: block;
     width: 100%;
-    height: 80%;
 }
 
 .newCard:hover .cardImage {
@@ -56,21 +57,20 @@
 }
 
 .cardImageDiv {
-    height: 100%;
-    padding: 20px 20px 0;
     display: flex;
     justify-content: center;
+    align-items: flex-end;
 }
 
 .cardImage {
     aspect-ratio: 1/1;
-    width: 100%;
+    width: 90%;
 }
 
 .cardButtonsDiv {
     z-index: 1000;
     height: 20%;
-    padding: 0 20px 14px;
+    width: 90%;
 }
 
 .cardButton {
