--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -4,13 +4,14 @@
     align-items: center;
     height: 8vh;
     border-bottom: 1px solid lightgrey;
+    background-color: white;
 }
 
 .logoDiv {
     display: flex;
     justify-content: flex-end;
     height: 60%;
-    width: 20%;
+    width: 15%;
 }
 
 .logoDiv > img {
@@ -39,7 +40,6 @@
     border: none;
     border-right: 2px solid grey;
     border-radius: 3px 0 0 3px;
-    box-sizing: content-box !important;
 }
 
 .searchBarForm {
@@ -55,24 +55,27 @@
     display: flex;
     align-items: center;
     border-radius: 3px;
-    background-color: #E0E0E0;
 }
 
 .searchBarInput {
+    background-color: #e0e0e099;
     height: 100%;
     width: 100%;
     font-size: 1rem;
-    background-color: #E0E0E0;
     border: 0;
     outline: none;
     margin: 0;
     border-radius: 3px;
 }
 
+.glassDiv {
+    height: 100%;
+}
+
 .glass {
-    height: 20px;
+    height: 100%;
     padding: 10px;
-    box-sizing: content-box !important;
+    background-color: #e0e0e099;
 }
 
 .previewDivider {
@@ -83,30 +86,49 @@
 
 .buttonsDiv {
     display: flex;
-    justify-content: space-around;
     align-items: center;
     height: 100%;
-    width: 30%;
-    box-sizing: border-box;
+    width: 35%;
 }
 
-.button {
-    background-color: white;
+.buttonsDiv > a {
+    height: 65%;
+}
+
+.navbarButton {
+    height: 100%;
+    padding: 5px 25px;
+    margin-right: 16px;
     border-radius: 5px;
-    font-size: 0.9rem;
+}
+
+.logOutButton {
+    height: 65%;
 }
 
 .normalColors {
-    border: 1px solid #ffffff;
-    background-color: rgb(239, 209, 170);
-    padding: 5px 25px ;
-    border-radius: 5px;
+    border: none;
+    background-color: #efd1aa;
 }
 
 .invertedColors {
     border: none;
-    background-color: #C2634B;
+    background-color: #c2634b;
     color: white;
-    padding: 5px 25px ;
-    border-radius: 5px;
 }
+
+.shoppingCartButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 65%;
+    padding: 5px 25px;
+    border: 1px solid #c2634b;
+    border-radius: 5px;
+    background-color: white;
+}
+
+.shoppingCartIcon {
+    height: 100%;
+}
+
