--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -132,3 +132,43 @@
     height: 100%;
 }
 
+.cartSideBarDiv {
+    position: fixed;
+    z-index: 10;
+    height: 100vh;
+    width: 40%;
+    top: 0%;
+    left: 100%;
+    transform: translateX(0%);
+    transition: transform 200ms cubic-bezier(0.6, 0.1, 0.68, 0.53);
+    background-color: #f7f7f7;
+}
+
+.slideCartIn {
+    transform: translateX(-100%);
+}
+
+.dimmerDiv {
+    position: fixed;
+    z-index: 8;
+    top: 0%;
+    height: 100vh;
+    width: 100%;
+    pointer-events: none;
+    transition: backdrop-filter 200ms cubic-bezier(0.6, 0.1, 0.68, 0.53);
+}
+
+.dimming {
+    backdrop-filter: blur(3px);
+}
+
+.retractCartSideBarButton {
+    position: fixed;
+    z-index: 10;
+    top: 0%;
+    left: 0%;
+    height: 100%;
+    width: 60%;
+    cursor: default !important;
+    opacity: 0;
+}
