--- a/client/src/components/CartSideBar/CartSideBar.css
+++ b/client/src/components/CartSideBar/CartSideBar.css
@@ -1,3 +1,68 @@
 .cartMainDiv {
-    border: 1px solid black;
+    height: 100%;
+    overflow: auto;
+}
+
+.cartName {
+    margin: 15px;
+}
+
+.cartItemDiv {
+    display: flex;
+    align-items: center;
+    height: 200px;
+    margin: 20px;
+    background-color: white;
+}
+
+.cartImage {
+    height: 100%;
+    padding: 10px;
+}
+
+.cartInfo {
+    flex: 1;
+    display: flex;
+    height: 100%;
+}
+
+.cartTitleAndPrice {
+    flex: 4;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.cartTitleAndPrice > p,
+.cartTitleAndPrice > h6 {
+    margin: 0;
+}
+
+.cartTitleAndPrice > hr {
+    width: 80%;
+    height: 2px;
+    border: 0;
+    margin: 0;
+    background-color: #c2634b;
+    opacity: 1;
+}
+
+.cartQuantity, .cartDelete {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cartQuantity > span {
+    padding: 10px;
+    background-color: #f7f7f7;
+}
+
+.cartDeleteButton {
+    height: 20px;
+    width: 20px;
+    border: none;
+    background-color: #c2634b;
 }
