--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -135,10 +135,10 @@
 .cartSideBarDiv {
     position: fixed;
     z-index: 10;
-    height: 100vh;
-    width: 40%;
     top: 0%;
     left: 100%;
+    height: 100vh;
+    width: 40%;
     transform: translateX(0%);
     transition: transform 200ms cubic-bezier(0.6, 0.1, 0.68, 0.53);
     background-color: #f7f7f7;
@@ -146,6 +146,15 @@
 
 .slideCartIn {
     transform: translateX(-100%);
+}
+
+.cartSideBarDivider {
+    position: absolute;
+    height: 90%;
+    width: 1px;
+    top: 5%;
+    left: 0;
+    background: linear-gradient(transparent, #c2634b, transparent)
 }
 
 .dimmerDiv {
