--- a/client/src/components/CartSideBar/CartSideBar.css
+++ b/client/src/components/CartSideBar/CartSideBar.css
@@ -3,15 +3,24 @@
     overflow: auto;
 }
 
-.cartName {
-    margin: 15px;
+.cartTop {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px;
+}
+
+.cartTop > h5 {
+    background-color: #efd1aa;
+    margin: 0;
+    padding: 15px;
 }
 
 .cartItemDiv {
     display: flex;
     align-items: center;
     height: 200px;
-    margin: 20px;
+    margin: 0 20px 20px;
     background-color: white;
 }
 
@@ -27,37 +36,24 @@
 }
 
 .cartTitleAndPrice {
+    position: relative;
     flex: 4;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    padding: 20px 0;
 }
 
-.cartTitleAndPrice > p,
 .cartTitleAndPrice > h6 {
     margin: 0;
 }
 
-.cartTitleAndPrice > hr {
-    width: 80%;
-    height: 2px;
-    border: 0;
-    margin: 0;
-    background-color: #c2634b;
-    opacity: 1;
-}
-
-.cartQuantity, .cartDelete {
+.cartDelete {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.cartQuantity > span {
-    padding: 10px;
-    background-color: #f7f7f7;
 }
 
 .cartDeleteButton {
@@ -65,4 +61,11 @@
     width: 20px;
     border: none;
     background-color: #c2634b;
+}
+
+.hackyDivider {
+    position: absolute;
+    border: 1px solid #c2634b;
+    top: 50%;
+    width: 90%;
 }
