--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -28,23 +28,86 @@
 }
 
 .searchDivWrapper {
+    position: relative;
     display: flex;
     height: 65%;
     width: 95%;
 }
 
 .navSelection {
-    background-color: rgb(239, 209, 170);
-    cursor: pointer;
+    display: flex;
+    align-items: center;
+    width: 15%;
     padding: 0 10px;
     border: none;
     border-right: 2px solid grey;
     border-radius: 3px 0 0 3px;
+    cursor: pointer;
+    background-color: rgb(239, 209, 170);
+}
+
+.navSelection > p {
+    margin: 0;
+    margin-right: 10px;
+}
+
+.navSelectionArrow {
+    margin-top: 2px;
+    height: 50%;
+}
+
+.navOptions {
+    position: absolute;
+    z-index: -1;
+    top: 100%;
+    height: 200%;
+    width: 15%;
+}
+
+.navOption {
+    display: flex;
+    align-items: center;
+    height: 50%;
+    padding: 0 10px;
+    border: 1px solid rgb(239, 209, 170);
+    background-color: white;
+}
+
+.navOption > p {
+    text-align: left;
+    margin: 0;
+}
+
+.navOption:hover {
+    background-color: #f7f7f7;
+    cursor: pointer;
+}
+
+.firstOption {
+    top: 100%;
+    border-bottom: none;
+}
+
+.secondOption {
+    top: 200%;
+    border-top: none;
+    border-radius: 0 0 3px 3px;
+}
+
+.closeNavSelectorButton {
+    position: fixed;
+    z-index: 10;
+    top: 0%;
+    left: 0%;
+    height: 100%;
+    width: 100%;
+    cursor: default !important;
+    opacity: 0;
 }
 
 .searchBarForm {
+    flex: 1;
     height: 100%;
-    width: 100%;
     display: flex;
     flex-direction: column;
 }
