--- a/client/src/pages/Checkout/Checkout.css
+++ b/client/src/pages/Checkout/Checkout.css
@@ -1,3 +1,36 @@
 .checkoutPageDiv {
     height: 88vh;
+    display: flex;
+    justify-content: center;
+}
+
+.checkoutWrapper {
+    display: flex;
+    width: 80%;
+    margin: 20px;
+    padding: 20px;
+}
+
+.checkoutDetails {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.shippingDetails {
+    flex: 1;
+}
+
+.summaryAndPayment {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.cartSummary {
+    flex: 1;
+}
+
+.paymentTerminal {
+    flex: 1;
 }
