--- a/client/src/components/CheckoutInfo/CheckoutInfo.css
+++ b/client/src/components/CheckoutInfo/CheckoutInfo.css
@@ -2,7 +2,6 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
 }
 
 .checkoutGrouper {
@@ -25,10 +24,11 @@
     left: 2px;
     font-family: "Open Sans",sans-serif;
     margin-bottom: 5px;
+    text-decoration: underline 1.8px lightgray;
 }
 
 .checkoutInput {
     font-family: "Open Sans",sans-serif;
     border: none;
-    border-bottom: 1.8px solid #f5f6f7
+    border-bottom: 1.8px solid #efd1aa;
 }
