--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -15,7 +15,7 @@
 .latestProductsText {
     width: 80%;
     text-align: left;
-    margin: 15px;
+    margin-top: 1vh;
 }
 
 @media only screen and (min-width: 1920px) {
