--- a/client/src/components/ProductCard/ProductCard.css
+++ b/client/src/components/ProductCard/ProductCard.css
@@ -140,8 +140,8 @@
 
  */
 
- 
-  .product_card small,
+
+  /* .product_card small,
  .product_card strong {
    display: block;
  }
@@ -196,14 +196,14 @@
     font-size: 15px;
     text-decoration: none;
     color: #4b4b4b;
- } 
+ }  */
 
-/* Offers
+/* Offers */
 .offers {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-  }
+    /* display: flex; */
+    /* flex-wrap: wrap; */
+    width: 18%;
+}
   .offers .wrap-card:not(:nth-child(5n)) {
     margin-right: 15px;
   }
@@ -216,7 +216,7 @@
   }
   
   /* Avatar - offers */
-  /* .offer-card div:first-child {
+   .offer-card div:first-child {
     display: flex;
     align-items: center;
     padding: 8px;
@@ -236,20 +236,23 @@
     height: 30px;
     border-radius: 50%;
     margin-right: 10px;
-  } */
+  } 
   
   /* Img - offers */
-  /* .product-card {
+   .product-card {
     width: 100%;
     height: 450px;
     object-fit: contain;
   }
-   */
+   
   /* Details - offers */
-  /* .offer-card div:last-child {
+   .offer-card div:last-child {
     padding: 10px;
     font-size: 14px;
     line-height: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
   .offer-card div:last-child p:first-child {
     font-weight: 600;
@@ -258,4 +261,4 @@
     font-size: 12px;
     color: var(--dark-grey);
   }
-   */
+  
